fixed alignment in benefit tab

--- a/src/components/GroupInfoType2/styles.less
+++ b/src/components/GroupInfoType2/styles.less
@@ -21,10 +21,10 @@
     line-height: normal;
     letter-spacing: normal;
     color: #000000;
-    width: 20%;
+    width: 44%;
   }
   .content {
-    width: 20%;
+    width: 100%;
     font-size: 13px;
     font-weight: normal;
     font-stretch: normal;
