--- a/src/pages/EmployeeProfile/components/BenefitTab/components/DependentTabs/styles.less
+++ b/src/pages/EmployeeProfile/components/BenefitTab/components/DependentTabs/styles.less
@@ -12,7 +12,7 @@
     .items {
       display: flex;
       justify-content: space-between;
-      width: 40%;
+      width: 60%;
       height: 15px;
       margin-bottom: 16px;
       font-size: 13px;
