--- a/src/pages/EmployeeProfile/components/BenefitTab/components/KYC/styles.less
+++ b/src/pages/EmployeeProfile/components/BenefitTab/components/KYC/styles.less
@@ -16,7 +16,7 @@
     .item {
       display: flex;
       justify-content: space-between;
-      width: 40%;
+      width: 60%;
       div:first-child {
         margin-bottom: 16px;
         width: 50%;
